# ETerm

./: .gitignore  .mcp.json  ARCHITECTURE_REFACTOR.md  DESIGN_ETERM_PLUGIN_SDK.md  DESIGN_HISTORY_KIT.md  DESIGN_PLUGIN_ARCHITECTURE_V2.md  DESIGN_PLUGIN_EVENTS.md  DESIGN_WORKSPACE_HISTORY.md  MIGRATION_PLAN.md  PHASE1_STEP1_SUMMARY.md  PLAN_AI_AUTOSUGGESTIONS.md  PLAN_ATLAS_REFACTOR.md  README.md  REFACTOR_COORDINATOR.md  RENDER_OPTIMIZATION_SUMMARY.md  VERIFICATION_CHECKLIST.md  long_text.txt  test.txt
.claude/: settings.local.json
.github/: README_zh.md  plugin-deps.json
ETerm/: AI_WRITING_ASSISTANT_TOOLS.md  ARCHITECTURE.md  FINAL_SUCCESS.md  INTEGRATION_GUIDE.md  MERGE_SUMMARY.md  QUICK_START.md  README.md  SUCCESS_SUMMARY.md  TEST_RENDERING.md  ansi_test.sh  build-sugarloaf.sh
Plugins/: PLUGIN_SDK.md  create-plugin.sh
docs/: ARCHITECTURE_V2.md  BUG_INTERMITTENT_FIRST_LINE_POSITION.md  CONTINUATION_PROMPT.md  COORDINATE_FIX_SUMMARY.md  CURRENT_STATUS.md  CURSOR_CONTEXT_DESIGN.md  CURSOR_CONTEXT_IMPLEMENTATION.md  DDD_ARCHITECTURE.md  DEBUG_COORDINATE_FIX.md  DESIGN_terminal_lock_refactor.md  DEVELOPMENT_PLAN.md  ETERM_MEMEX_VLAUDE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  NEW_ARCHITECTURE_GUIDE.md  PHASE1_PERFORMANCE_ISSUE.md  PLAN_CORE_TERMINAL_SERVICE.md  PLAN_VLAUDE_RUST.md  PLUGIN_SYSTEM_DESIGN.md  RAYON_PARALLEL_RENDERING.md  REFACTOR_SESSION_PARSING.md  SEARCH_SCROLLBACK_IMPLEMENTATION.md  SELECTION_AND_SEARCH_REFACTOR.md  SNAPSHOT_CACHE_IMPLEMENTATION.md  TAB_CONTENT_ABSTRACTION.md  TERMINALS_LOCK_ANALYSIS.md  TERMINAL_POOL_INTEGRATION.md  TODO_KEYBOARD_UNIFICATION.md  rendering-refactor.md
rio/: Cargo.toml  FRAGMENTS_CACHE_USAGE.md  (+4 more)
rio/sugarloaf-ffi/: Cargo.toml  FFI_INTERFACE_DESIGN.md  LOGGING.md  PHANTOM_TYPE_REFACTOR_SUMMARY.md  PHASE1_STEP1_COMPLETION.md  PHASE2_COMPLETION.md  STEP_1_4_SUMMARY.md
rio/sugarloaf-ffi/benches/: surface_cache_bench.rs
rio/sugarloaf-ffi/docs/: ARCHITECTURE_render_pipeline.md  DESIGN_ffi_async_phase1.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_state_snapshot.md  REVIEW_FINDINGS.md  p4-surface-cache-optimization.md
rio/sugarloaf-ffi/src/: display_link.rs  fair_rwlock.rs  lib.rs  lock_contention_test.rs  rio_event.rs  rio_machine.rs  rio_terminal.rs  sync.rs
rio/sugarloaf-ffi/src/app/: daemon_client.rs  ffi.rs  mod.rs  render_scheduler.rs  render_surface.rs  terminal_app.rs  terminal_pool.rs  terminal_store.rs
rio/sugarloaf-ffi/src/compositor/: mod.rs
rio/sugarloaf-ffi/src/domain/: cursor.rs  grid.rs  mod.rs  renderable.rs  search.rs  selection.rs  state.rs
rio/sugarloaf-ffi/src/domain/aggregates/: mod.rs  render_state.rs  terminal.rs
rio/sugarloaf-ffi/src/domain/events/: mod.rs  terminal_event.rs
rio/sugarloaf-ffi/src/domain/primitives/: mod.rs  pixels.rs  point.rs  position.rs  size.rs
rio/sugarloaf-ffi/src/domain/views/: cursor.rs  grid.rs  hyperlink.rs  ime.rs  mod.rs  search.rs  selection.rs
rio/sugarloaf-ffi/src/ffi/: cursor.rs  hyperlink.rs  ime.rs  keyboard.rs  logging.rs  mod.rs  render_scheduler.rs  selection.rs  terminal_pool.rs  word_boundary.rs
rio/sugarloaf-ffi/src/infra/: atomic_cache.rs  log_buffer.rs  mod.rs  pipeline_bench.rs  selection_overlay.rs  spsc_queue.rs  stress_tests.rs
rio/sugarloaf-ffi/src/render/: box_drawing.rs  config.rs  context.rs  frame.rs  mod.rs  renderer.rs
rio/sugarloaf-ffi/src/render/block_drawing/: block_elements.rs  detector.rs  mod.rs
rio/sugarloaf-ffi/src/render/cache/: glyph_atlas.rs  hash.rs  line_cache.rs  mod.rs
rio/sugarloaf-ffi/src/render/font/: font_context.rs  mod.rs
rio/sugarloaf-ffi/src/render/layout/: glyph.rs  mod.rs  text_shaper.rs
rio/sugarloaf-ffi/src/render/rasterizer/: glyph_rasterizer.rs  line_rasterizer.rs  mod.rs
sugarloaf-ffi/: Cargo.toml
sugarloaf-ffi/src/: context_grid.rs  lib.rs  pty_machine.rs  rio_event.rs  rio_machine.rs  rio_terminal.rs  terminal.rs
(+670 files in other folders)
