[package]
name = "sugarloaf-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

# WezTerm 测试已禁用 (API 不兼容)
# [[bin]]
# name = "test-wezterm-mux"
# path = "tests/test_wezterm_mux.rs"
#
# [[bin]]
# name = "test-wezterm-simple"
# path = "tests/test_wezterm_simple.rs"

[[example]]
name = "visual_test"
path = "examples/visual_test.rs"

[dependencies]
sugarloaf = { path = "../rio/sugarloaf" }
raw-window-handle = "0.6.2"
wgpu = "27.0.1"

# 终端相关依赖
teletypewriter = { path = "../rio/teletypewriter" }
rio-backend = { path = "../rio/rio-backend" }
parking_lot = "0.12.4"
libc = "0.2.174"

# WezTerm 依赖
mux = { path = "../wezterm/mux" }
wezterm-term = { path = "../wezterm/term" }
portable-pty = { path = "../wezterm/pty" }
config = { path = "../wezterm/config" }
