[package]
name = "sugarloaf-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
sugarloaf = { path = "../sugarloaf" }
raw-window-handle = "0.6.2"
wgpu = "27.0.1"

# Skia (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { version = "0.82.0", features = ["metal", "textlayout"] }
objc2 = "0.5"

# 终端相关依赖 (RIO)
teletypewriter = { path = "../teletypewriter" }
rio-backend = { path = "../rio-backend" }
parking_lot = "0.12.4"
libc = "0.2.174"

# 键盘序列编码
terminput = "0.5"

# 事件驱动 PTY (mio fork)
corcovado = { path = "../corcovado" }

# 并发渲染优化
rayon = "1.8"

# 搜索优化
regex = "1"
once_cell = "1.19"

# JSON 序列化 (LogBuffer 查询结果 + Daemon 协议)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY Daemon (共享内存 ring buffer)
pty-daemon = { path = "../../../pty-daemon" }

# 内存优化
smallvec = "1.13"
lru = "0.12"

# MCP Router Core 已改为独立 dylib，通过 dlopen 动态加载
# 不再作为静态依赖，避免符号冲突问题

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "surface_cache_bench"
harness = false
